fix Modal z-index

--- a/src/components/Modal.scss
+++ b/src/components/Modal.scss
@@ -3,7 +3,7 @@
 .excalidraw {
   &.excalidraw-modal-container {
     position: absolute;
-    z-index: 10;
+    z-index: 9999;
   }
 
   .Modal {
